<resources>
    <string name="app_name">Android y Firebase</string>
    <string name="nombre_usuario">Email</string>
    <string name="password">Password</string>
    <string name="ingresar">Ingresar</string>
    <string name="registrar">Registrar Nuevo Usuario</string>
    <string name="ingreso">Click en Ingresar</string>
    <string name="title_activity_maps">Map</string>
    <string name="nombre">Nombre</string>
    <string name="usuarioExistente">ya tiene usuario</string>
    <string name="registroUsuario">Usuario Registrado con Exito.</string>
    <string name="guarda_usuario">Guardar Registro</string>
</resources>
